syntax = "proto3";

option optimize_for = SPEED;

package cn.tursom.im.protobuf;
option java_outer_classname = "TursomSystemMsg";
option go_package = "./tursom_im_protobuf";

enum CompressTypeEnum {
  NONE = 0;
  GZ = 1;
  ZIP = 2;
}

message ListenLiveRoom {
  uint64 roomId = 1;
  string liver = 2;
}

message ListLiveRoomRequest {
}

message ListLiveRoomResponse {
  string uid = 1;
  repeated uint64 roomId = 2;
}

message AddMailReceiver {
  string          receiver = 1;
  bool            all = 2;
  repeated string roomId = 3;
}

message GetLiveDanmuRecordList {
  string reqId = 1;
  string roomId = 2;
  int32  skip = 3;
  int32  limit = 4;
}

message ReturnLiveDanmuRecordList {
  string                   reqId = 1;
  string                   roomId = 2;
  repeated LiveDanmuRecord recordList = 3;
}

message LiveDanmuRecord {
  string id = 1;
  uint64 start = 2;
  uint64 stop = 3;
  uint64 size = 4;
}

message GetLiveDanmuRecord {
  string reqId = 1;
  string liveDanmuRecordId = 2;
}

message ReturnLiveDanmuRecord {
  string reqId = 1;
  bool   exist = 2;
  bytes  data = 3;
  CompressTypeEnum compress = 4;
}

message LiveRecordReady {
  string reqId = 1;
  string roomId = 2;
  int64 start = 3;
  int64 stop = 4;
  string url = 5;
}

/**
 * 获取支持的服务列表
 */
message GetServiceRequest {
  string reqId = 1;
  repeated string serviceId = 2;
}

/**
 * 返回支持的服务列表
 */
message GetServiceResponse {
  string reqId = 1;
  repeated string systemServiceId = 2;
  repeated string broadServiceId = 3;
}
